--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- First, create a form tag where our inputs will be nested -->
 <form>
   
-  <
+  <label
 </form>
 
       <!-- Add a label for 'fullname'-->
