--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <form>
   
   <label for="fullname">Enter Name</label>
-  <input type="text"
+  <input type="text" name="fullname">
 </form>
 
       <!-- Add a label for 'fullname'-->
