--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-
+  <label for="email">Enter Email</label>
+  <input type="email" name="email">
 
       <!-- Add a label for 'email'-->
 
