--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   
   <label for="fullname">Enter Name</label>
   <input type="text" name="fullname">
-
+  <label for="email">Enter Email</label>
+  <input type="email" name="email">
+  
 
 </form>
 
@@ -23,8 +25,6 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-
-
 
       <!-- Add a label for 'email'-->
 
