--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   <input type="email" name="email">
   <label for="Telephone">Enter Telephone (optional)</label>
   <input type="tel" name="Telephone">
-  <label for="Message">Enter Email</label>
-  <input type="email" name="email">
+  <label for="Message">Enter Message</label>
+  <input type="text" name="Message">
 </form>
 
       <!-- Add a label for 'fullname'-->
