--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <label for="Message">Enter Message</label>
   <input type="text" name="Message">
   
-  
+  <input type="checkbox" name="vehicle1" value="Bike"> I have a bike<br>
   
 </form>
 
