automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   
   <input type="checkbox">Subscribe<br>
   
+  <input type="submit" value="Submit">
+  
 </form>
 
       <!-- Add a label for 'fullname'-->
