--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <label for="Message">Enter Message</label>
   <input type="text" name="Message">
   
-  <input type="checkbox">Subscribe<br>
+  <label for="checkbox">Subscribe</label>
+  <input type="checkbox" name=checkbox>
   
   <input type="submit" value="Submit">
   
