automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
   <label for="Message">Enter Message</label>
   <input type="text" name="Message">
   
-  
   <label for="checkbox">Subscribe</label>
-  <input type="checkbox" name=checkbox>
+  <input type="text" name=checkbox>
   
   <input type="submit" value="Submit">
   
