automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <input type="text" name="Message">
   
   <label for="checkbox">Subscribe</label>
-  <input type="text" name=checkbox>
+  <input type="checkbox" name="checkbox">
   
   <input type="submit" value="Submit">
   
