--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <form>
   
   <label for="fullname">Enter Name</label>
-  <input type="text" name="fullname" id=>
+  <input type="text" name="fullname" id="fullname" placeholder="Enter Name">
   
   <label for="email">Enter Email</label>
   <input type="email" name="email">
