automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   <input type="text" name="fullname" id="fullname" placeholder="Enter Name">
   
   <label for="email">Enter Email</label>
-  <input type="email" name="email">
+  <input type="email" name="email" id="fullname" placeholder="Enter Name">
   
   <label for="Telephone">Enter Telephone (optional)</label>
-  <input type="tel" name="Telephone">
+  <input type="tel" name="Telephone" >
   
   <label for="Message">Enter Message</label>
   <input type="text" name="Message">
