automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <input type="email" name="email" id="fullname" placeholder="Enter Name">
   
   <label for="Telephone">Enter Telephone (optional)</label>
-  <input type="tel" name="Telephone" >
+  <input type="tel" name="Telephone"id="fullname" placeholder="Enter Name" >
   
   <label for="Message">Enter Message</label>
-  <input type="text" name="Message">
+  <input type="text" name="Message" >
   
   <label for="checkbox">Subscribe</label>
   <input type="checkbox" name="checkbox">
