automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   <input type="text" name="fullname" id="fullname" placeholder="Enter Name">
   
   <label for="email">Enter Email</label>
-  <input type="email" name="email" id="fullname" placeholder="Enter Name">
+  <input type="email" name="email" id="email" placeholder="Enter Email">
   
   <label for="Telephone">Enter Telephone (optional)</label>
-  <input type="tel" name="Telephone"id="fullname" placeholder="Enter Name" >
+  <input type="tel" name="Telephone" id="Telephone" placeholder="Enter Telephone (optional)">
   
   <label for="Message">Enter Message</label>
-  <input type="text" name="Message" >
+  <input type="text" name="Message" id="Message" placeholder="Enter Message">
   
   <label for="checkbox">Subscribe</label>
-  <input type="checkbox" name="checkbox">
+  <input type="checkbox" name="checkbox" id="checkbox" placeholder="Subscribe">
   
   <input type="submit" value="Submit">
   
