automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
 <form>
   
   <label for="fullname">Enter Name</label>
-  <input type="text" name="fullname" id="fullname" placeholder="Enter Name">
+  <input type="text" name="fullname" id="fullname" placeholder="Enter Name" required>
   
   <label for="email">Enter Email</label>
-  <input type="email" name="email" id="email" placeholder="Enter Email">
+  <input type="email" name="email" id="email" placeholder="Enter Email" required>
   
   <label for="Telephone">Enter Telephone (optional)</label>
   <input type="tel" name="Telephone" id="Telephone" placeholder="Enter Telephone (optional)">
   
   <label for="Message">Enter Message</label>
-  <input type="text" name="Message" id="Message" placeholder="Enter Message">
+  <input type="text" name="Message" id="Message" placeholder="Enter Message" required>
   
   <label for="checkbox">Subscribe</label>
   <input type="checkbox" name="checkbox" id="checkbox" placeholder="Subscribe">
