--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
   <label for="email">Enter Email</label>
   <input type="email" name="email" id="email" placeholder="Enter Email" required>
   
-  <label for="Telephone">Enter Telephone (optional)</label>
-  <input type="tel" name="Telephone" id="Telephone" placeholder="Enter Telephone (optional)">
+  <label for="phone">Enter Telephone (optional)</label>
+  <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)">
   
   <label for="Message">Enter Message</label>
-  <input type="text" name="Message" id="Message" placeholder="Enter Message" required>
+  <input type="text" name="Message" id="text" placeholder="Enter Message" required>
   
   <label for="checkbox">Subscribe</label>
   <input type="checkbox" name="checkbox" id="checkbox" placeholder="Subscribe">
