automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <label for="phone">Enter Telephone (optional)</label>
   <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)">
   
-  <label for="Message">Enter Message</label>
-  <input type="text" name="Message" id="text" placeholder="Enter Message" required>
+  <label for="message">Enter Message</label>
+  <input type="text" name="message" id="text" placeholder="Enter Message" required>
   
   <label for="checkbox">Subscribe</label>
   <input type="checkbox" name="checkbox" id="checkbox" placeholder="Subscribe">
