automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <input type="tel" name="phone" id="phone" placeholder="Enter Telephone (optional)">
   
   <label for="message">Enter Message</label>
-  <input type="text" name="message" id="text" placeholder="Enter Message" required>
+  <textarea type="text" name="message" id="text" placeholder="Enter Message" required></textarea>
   
   <label for="checkbox">Subscribe</label>
   <input type="checkbox" name="checkbox" id="checkbox" placeholder="Subscribe">
